# language

./: README.md  bash_cmd.md  input.txt
arm/: a.atomic.s  a.c  a.non_atomic.s  comp.sh
awk/: 2_pi_r.awk  blank_lines.awk  find_max_min.awk  num.txt  readme.md
bash/: 2d.sh  7.txt  Makefile  README.md  array.sh  associative_arr.sh  average.sh  bash_cmd.md  declare.sh  float_expr.sh  fractal.sh  lonely_int.sh  lonely_int.txt  slice.txt  var.sh
c/: TreePLRU.cpp  atomic_api.c  atomic_api2.c  atomic_api2.txt  circular_buffer.c  clock.c  condition_var.c  crc32.cpp  diag_printm.c  endian.c  entry.c  get_eth0.c  get_mac.c  inline_asm.c  ld.c  list_append.c  list_append_v1.c  list_append_v1_1.c  list_append_v1_2.c  list_append_v1_3.c  list_append_v2.c  list_append_v3.c  m.c  m64.c  multithreading.c  mutexes.c  pk11.c  qsort.c  rlist.c  signal.c  simple_threads.c  spectre.c  spectre.mips.c  spectre.o3.objdump.txt  swap16.c  (+4 more)
c#/: Makefile  README.md  gtk_hello.cs  hello.cs  ref_arr.cs
c++/: antiprime.cpp  arr.cpp  arr_split.cpp  atomic_ex.cpp  atomic_exchange_ex.cpp  bitmap.cc  bitset.cc  c11.cpp  candies.cpp  candies2.cpp  castle.cpp  castle.pq.cpp  castleq.cpp  circular-palindromes.cpp  class.cpp  cnt_sort.cpp  cnt_sort2.cpp  cnt_sort3.cpp  cnt_sort4.cpp  coin.cpp  comp.cpp  cookie.cpp  cookie.pq.cpp  cpp_test.cpp  crypt.cpp  d.cpp  decode.cpp  decrypt.cpp  dij.cpp  dij2.cpp  dij22.cpp  dij3.cpp  dij33.cpp  dij333.cpp  dij77.cpp  dij777.cpp  dij888.cpp  dij99.cpp  dij999.cpp  double.cpp  (+108 more)
cmake/ex3/: CMakeLists.txt  README
cmake/ex3/src/: gen_version.sh  git_version.cc
(+324 files in other folders)
